<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MstarLauncher!</string>
    <string name="app_name">MstarLauncher</string>
    <string name="allapp_name">AllApps</string>
    <string name="allapp">Applications</string>
    <string name="store">Store</string>
    <string name="browser">Browser</string>
    <string name="setting">Settings</string>
    <string name="tvsource">TV</string>
    <string name="localmm">LocalMM</string>
    <string name="contentdes">img</string>
    <string name="zixun">News</string>
    <string name="tianqi">Weather</string>
    <string name="yingyongtuijian">Hot Applications</string>
    <string name="gonggongxinxi">Movies</string>
    <string name="addtitle">Shortcut</string>
    <string name="addsuccess">This Shortcut have added success</string>
    <string name="addnotsuccess">This shortcut added fail</string>
    <string name="addconfirm">ok</string>
    <string name="deltitle">Shortcut</string>
    <string name="delmessage">Confirm to delete the Shortcut</string>
    <string name="delconfirm">ok</string>
    <string name="delcancel">cancel</string>
    <string name="movemode">Change to move mode</string>
    <string name="normalmode">Change to normal mode</string>
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="package_not_find_ERROR_1">Package not find</string>
    <string name="package_not_find_ERROR_2">Package not find,Failed to get data!</string>
    <string name="this_page_no_icon">This page has no icon!</string>
    <string name="all_page_is_full">All the page is full!</string>
    <string name="the_page_have_exist">This App have exist at page:</string>
    <string name="the_app_have_add">This Application have added to the </string>
    <string name="page"> page</string>
    <string name="scene">MstarHomeUI</string>
    <string name="tv_agent">TV</string>
    <string name="tv_icon001">Page0.010</string>
    <string name="tv_icon002">Page0.011</string>
    <string name="tv_icon003">Page0.012</string>
    <string name="tv_icon004">Page0.013</string>
    <string name="tv_icon005">Page0.014</string>
    <string name="tv_icon006">Page0.020</string>
    <string name="tv_icon007">Page0.021</string>
    <string name="tv_icon008">Page0.022</string>
    <string name="tv_icon009">Page0.023</string>
    <string name="tv_icon010">Page0.024</string>
    <string name="tv_icon011">Page0.025</string>
    <string name="move_agent">Move</string>
    <string name="move_icon001">Page1.010</string>
    <string name="move_icon002">Page1.011</string>
    <string name="move_icon003">Page1.012</string>
    <string name="move_icon004">Page1.013</string>
    <string name="move_icon005">Page1.014</string>
    <string name="move_icon006">Page1.020</string>
    <string name="move_icon007">Page1.021</string>
    <string name="move_icon008">Page1.022</string>
    <string name="move_icon009">Page1.023</string>
    <string name="move_icon010">Page1.024</string>
    <string name="move_icon011">Page1.025</string>
    <string name="show_agent">Show</string>
    <string name="show_tv">Page2.000</string>
    <string name="show_tv_title">Page2.010</string>
    <string name="show_ad">Page2.020</string>
    <string name="favorite_agent">Favorite</string>
    <string name="favorite_icon001">Plane.000</string>
    <string name="favorite_icon002">Plane.001</string>
    <string name="favorite_icon003">Plane.002</string>
    <string name="favorite_icon004">Plane.003</string>
    <string name="favorite_icon005">Plane.004</string>
    <string name="favorite_icon006">Plane.005</string>
    <string name="favorite_icon007">Plane.006</string>
    <string name="favorite_icon008">Plane.007</string>
    <string name="favorite_icon009">Plane.008</string>
    <string name="rec_video_agent">RecVideo</string>
    <string name="rec_video_icon001">Page2.002</string>
    <string name="rec_video_icon002">Page2.011</string>
    <string name="rec_video_icon003">Page2.012</string>
    <string name="rec_video_icon004">Page2.021</string>
    <string name="rec_video_icon005">Page2.022</string>
    <string name="rec_app_agent">RecApp</string>
    <string name="rec_app_icon001">Page2.004</string>
    <string name="rec_app_icon002">Page2.013</string>
    <string name="rec_app_icon003">Page2.014</string>
    <string name="rec_app_icon004">Page2.023</string>
    <string name="rec_app_icon005">Page2.024</string>
    <string name="pre_app_agent">PreApp</string>
    <string name="pre_app_icon001">Page3.001</string>
    <string name="pre_app_icon002">Page3.002</string>
    <string name="pre_app_icon003">Page3.010</string>
    <string name="pre_app_icon004">Page3.011</string>
    <string name="pre_app_icon005">Page3.012</string>
    <string name="pre_app_icon006">Page3.020</string>
    <string name="pre_app_icon007">Page3.021</string>
    <string name="pre_app_icon008">Page3.022</string>
    <string name="my_app_agent">MyApp</string>
    <string name="my_app_icon001">Page3.004</string>
    <string name="my_app_icon002">Page3.005</string>
    <string name="my_app_icon003">Page3.006</string>
    <string name="my_app_icon004">Page3.007</string>
    <string name="my_app_icon005">Page3.013</string>
    <string name="my_app_icon006">Page3.014</string>
    <string name="my_app_icon007">Page3.015</string>
    <string name="my_app_icon008">Page3.016</string>
    <string name="my_app_icon009">Page3.017</string>
    <string name="my_app_icon010">Page3.023</string>
    <string name="my_app_icon011">Page3.024</string>
    <string name="my_app_icon012">Page3.025</string>
    <string name="my_app_icon013">Page3.026</string>
    <string name="my_app_icon014">Page3.027</string>
    <string name="my_app_icon015">Page4.001</string>
    <string name="my_app_icon016">Page4.002</string>
    <string name="my_app_icon017">Page4.003</string>
    <string name="my_app_icon018">Page4.004</string>
    <string name="my_app_icon019">Page4.005</string>
    <string name="my_app_icon020">Page4.006</string>
    <string name="my_app_icon021">Page4.007</string>
    <string name="my_app_icon022">Page4.010</string>
    <string name="my_app_icon023">Page4.011</string>
    <string name="my_app_icon024">Page4.012</string>
    <string name="my_app_icon025">Page4.013</string>
    <string name="my_app_icon026">Page4.014</string>
    <string name="my_app_icon027">Page4.015</string>
    <string name="my_app_icon028">Page4.016</string>
    <string name="my_app_icon029">Page4.017</string>
    <string name="my_app_icon030">Page4.020</string>
    <string name="my_app_icon031">Page4.021</string>
    <string name="my_app_icon032">Page4.022</string>
    <string name="my_app_icon033">Page4.023</string>
    <string name="my_app_icon034">Page4.024</string>
    <string name="my_app_icon035">Page4.025</string>
    <string name="my_app_icon036">Page4.026</string>
    <string name="my_app_icon037">Page4.027</string>
    <!-- 3D define end -->

</resources>