<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/imagetv"
        android:layout_width="250.5dp"
        android:layout_height="183dp"
        android:layout_x="39dp"
        android:layout_y="10.5dp"
        android:background="@drawable/tv_bg"
        android:contentDescription="@string/contentdes" >
    </Button>

    <LinearLayout
        android:id="@+id/tv_surfaceview_layout"
        android:layout_width="@dimen/surfaceParams_width"
        android:layout_height="@dimen/surfaceParams_height"
        android:layout_x="@dimen/surfaceParams_x"
        android:layout_y="@dimen/surfaceParams_y"
        android:orientation="horizontal"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <GridView
        android:id="@+id/gridview1"
        android:layout_width="600dp"
        android:layout_height="202.5dp"
        android:layout_x="345dp"
        android:layout_y="15dp"
        android:columnWidth="15dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="5"
        android:scrollbars="none" >
    </GridView>

    <ImageView
        android:id="@+id/imagemiddle"
        android:layout_width="712.5dp"
        android:layout_height="150dp"
        android:layout_x="127.5dp"
        android:layout_y="232.5dp"
        android:contentDescription="@string/contentdes"
        android:src="@drawable/yuanpan" >
    </ImageView>

    <TextView
        android:id="@+id/buttonzixun"
        android:layout_width="112.5dp"
        android:layout_height="wrap_content"
        android:layout_x="177dp"
        android:layout_y="307.5dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/zixun"
        android:textColor="#FFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/buttontianqi"
        android:layout_width="112.5dp"
        android:layout_height="wrap_content"
        android:layout_x="339.75dp"
        android:layout_y="307.5dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/tianqi"
        android:textColor="#FFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonyinyong"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_x="483.75dp"
        android:layout_y="210dp"
        android:clickable="false"
        android:contentDescription="@string/contentdes"
        android:focusable="false"
        android:paddingTop="9dp" >
    </Button>

    <Button
        android:id="@+id/buttonxinxi"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_x="645dp"
        android:layout_y="210dp"
        android:background="@drawable/button_bg"
        android:contentDescription="@string/contentdes"
        android:drawableTop="@drawable/button4"
        android:focusable="true"
        android:paddingTop="9dp" >
    </Button>

    <TextView
        android:id="@+id/buttonyinyongtext"
        android:layout_width="112.5dp"
        android:layout_height="wrap_content"
        android:layout_x="502.5dp"
        android:layout_y="307.5dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/yingyongtuijian"
        android:textColor="#FFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/buttonxinxitext"
        android:layout_width="112.5dp"
        android:layout_height="wrap_content"
        android:layout_x="665.25dp"
        android:layout_y="307.5dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/gonggongxinxi"
        android:textColor="#FFFF"
        android:textSize="15sp" />

</AbsoluteLayout>